# apparatus-examples

./: README
docker-cpp/: CMakeLists.txt  Dockerfile-v1  Dockerfile-v1.5  Dockerfile-v2  Dockerfile-v3  client.cc  server.cc
drifting/: drifting.cc  drifting.py  randomwalk.py  requirements.txt
nonblocking/: Makefile  lib.c  lib.h  server.c
signal-handling/: Makefile  lib.c  server-bad.c  server-best.c  server-good.c
smartshaving/: shavecounter.ino
